--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,21 @@
+  @Manual{r-core,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2018},
+    url = {https://www.R-project.org/},
+  }
 
+
+@Article{Kent2017,
+    title = {valr: Reproducible Genome Interval Arithmetic in R},
+    year = {2017},
+    author = {Kent A. Riemondy and Ryan M. Sheridan and Austin Gillen and Yinni Yu and Christopher G. Bennett and Jay R. Hesselberth},
+    journal = {F1000Research},
+    doi = {10.12688/f1000research.11997.1},
+  }
+  
 @BOOK{Fowler2010-zd,
   title     = "{Domain-Specific} Languages",
   author    = "Fowler, Martin",
